--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ members = []
 version = "0.1.0"
 rust-version = "1.90.0"
 edition = "2024"
-authors = ["CieriA"]
+authors = [""]
 license = "ISC"
-repository = "https://github.com/CieriA/<UNK>"
+repository = ""
 
 [workspace.lints.rust]
 unsafe_op_in_unsafe_fn = "deny"
