--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ redudant_clone = "warn"
 [workspace.lints.clippy]
 pedantic = "warn"
 module_name_repetitions = "allow"
+wildcard_imports = "forbid"
