--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,16 @@ resolver = "3"
 members = []
 
 [workspace.package]
+description = ""
 version = "0.1.0"
 rust-version = "1.90.0"
 edition = "2024"
 authors = [""]
 license = "ISC"
+readme = "README.md"
 repository = ""
+keywords = []
+categories = []
 
 [workspace.dependencies]
 
@@ -16,17 +20,14 @@ repository = ""
 # unsafe_code = "warn"
 unsafe_op_in_unsafe_fn = "deny"
 non_snake_case = "warn"
-missing_panic_docs = "forbid"
-undocumented_unsafe_blocks = "forbid"
-redudant_clone = "warn"
 unreachable_pub = "warn"
-missing_debug_implementation = "warn"
+missing_debug_implementations = "warn"
 
 [workspace.lints.clippy]
-pedantic = "warn"
+pedantic = { level = "warn", priority = -1 }
 module_name_repetitions = "allow"
-wildcard_imports = "forbid"
-cargo_common_metadata = "warn"
+wildcard_imports = "deny"
+undocumented_unsafe_blocks = "forbid"
 
 [workspace.lints.rustdoc]
 broken_intra_doc_links = "deny"
